[package]
name = "learn-splatoon"
version = "0.0.1"
authors = ["Zageron <hello@adambryant.ca>"]
edition = "2021"


[dependencies]
actix-files = "0.6.0-beta.10"
actix-http = "3.0.0-beta.15"
actix-service = "2.0.1"
actix-utils = "3.0.0"
actix-web = "4.0.0-beta.14"
anyhow = "1.0.51"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures-core = "0.3.17"
futures-util = "0.3.17"
handlebars = { version = "4.1.6", features = ["dir_source"] }
maplit = "1.0.2"
mime = "0.3.16"
mongodb = "2.1.0"
ory-kratos-client = "0.7.6-alpha.7"
pin-project = "1.0.8"
rand = "0.8.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
