[package]
name = "learn-splatoon"
version = "0.0.1"
authors = ["Zageron <hello@adambryant.ca>"]
edition = "2021"


[dependencies]
actix-files = "0.6.1"
actix-http = "3.1.0"
actix-service = "2.0.2"
actix-web = "4.1.0"
anyhow = "1.0.58"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures-core = "0.3.21"
futures-util = "0.3.21"
handlebars = { version = "4.3.1", features = ["dir_source"] }
maplit = "1.0.2"
mime = "0.3.16"
mongodb = "2.3.0-beta"
ory-kratos-client = "0.10.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
